[package]
name = "object-cache"
version = "0.1.0"
authors = ["dinesh"]
edition = "2021"
description = "save or get object from file cache"
license = "MIT License"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
log = "0.4.17"
env_logger = "0.10.0"
tokio = { version = "1.22.0", features = ["full"] }